<resources>
    <string name="app_name">Wound Masters inc</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_email_confirm">Confirm your Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm your Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Register Now</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_forget">Send password to email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_home_address">Your home address</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="prompt_history">History</string>
    <string name="Home">Home</string>
    <string name="select_service">Select your service</string>
    <string name="time_requested">Time requested</string>
    <string name="others">Others</string>
    <string name="send_request">Send to Wound Masters</string>
    <string name="request_further_info">Further information</string>

    <string-array name="service_provide">
        <item>Select your service</item>
        <item>Service 1</item>
        <item>Service 2</item>
        <item>Service 3</item>
        <item>Service 4</item>
        <item>Service 5</item>
    </string-array>

</resources>
