<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/prompt_history" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/others">
        <menu>
            <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="" />-->
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
