<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="letsrealize.com.woundmastersinc.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_padding"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.06"
                android:background="@android:color/background_light"
                android:src="@drawable/app_logo" />

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edittext_bottom_padding"
                android:layout_weight="0.01"
                android:background="@drawable/edit_text_design"
                android:drawablePadding="@dimen/icon_text_margin"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:textSize="18sp"
                android:paddingBottom="@dimen/button_padding"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:paddingTop="@dimen/button_padding" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edittext_bottom_padding"
                android:layout_weight="0.01"
                android:background="@drawable/edit_text_design"
                android:drawablePadding="@dimen/icon_text_margin"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/button_padding"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:paddingTop="@dimen/button_padding"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edittext_bottom_padding"
                android:layout_weight="0.01"
                android:background="@drawable/edit_text_design"
                android:drawablePadding="@dimen/icon_text_margin"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/prompt_password_confirm"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/button_padding"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:paddingTop="@dimen/button_padding"
                android:textSize="18sp" />

            <AutoCompleteTextView
android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edittext_bottom_padding"
                android:layout_weight="0.01"
                android:background="@drawable/edit_text_design"
                android:drawablePadding="@dimen/icon_text_margin"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:paddingBottom="@dimen/button_padding"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:paddingTop="@dimen/button_padding" />

            <AutoCompleteTextView
                android:id="@+id/email_confirma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edittext_bottom_padding"
                android:layout_weight="0.01"
                android:background="@drawable/edit_text_design"
                android:drawablePadding="@dimen/icon_text_margin"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/prompt_email_confirm"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:paddingBottom="@dimen/button_padding"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:paddingTop="@dimen/button_padding" />

            <AutoCompleteTextView
                android:id="@+id/home_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edittext_bottom_padding"
                android:layout_weight="0.01"
                android:background="@drawable/edit_text_design"
                android:drawablePadding="@dimen/icon_text_margin"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/prompt_home_address"
                android:inputType="text"
                android:textSize="18sp"
                android:paddingBottom="@dimen/button_padding"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:paddingTop="@dimen/button_padding" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@color/primaryColor"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/action_sign_up_short"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/tvResetPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.06"
                android:autoLink="all"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/action_sign_in_short"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textColorHighlight="@color/primaryLightColor"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
